*zap*
-improved endpoint body reading, the old way was pretty jank
-fleshed out the laser effect and added the one that targets players :D