@@ -1,5 +1,12 @@
 package fyi.sorenneedscoffee.aurora.effects.laser;
 
+import org.apache.commons.lang.Validate;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.entity.Player;
+import org.bukkit.plugin.Plugin;
+import org.bukkit.scheduler.BukkitRunnable;
+
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -7,13 +14,6 @@ import java.lang.reflect.Method;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.UUID;
-
-import org.apache.commons.lang.Validate;
-import org.bukkit.Bukkit;
-import org.bukkit.Location;
-import org.bukkit.entity.Player;
-import org.bukkit.plugin.Plugin;
-import org.bukkit.scheduler.BukkitRunnable;
 
 /**
  * A whole class to create Guardian Beams by reflection </br>
@@ -23,55 +23,46 @@ import org.bukkit.scheduler.BukkitRunnable;
  * @see <a href="https://github.com/SkytAsul/GuardianBeam">GitHub page</a>
  * @author SkytAsul
  */
-class ReferenceLaser {
+class TargetedLaser {
     private final int duration;
     private final int distanceSquared;
     private Location start;
-    private Location end;
 
-    private final Object createGuardianPacket;
-    private final Object createSquidPacket;
-    private final Object teamAddPacket;
-    private final Object destroyPacket;
-    private final Object metadataPacketGuardian;
-    private final Object metadataPacketSquid;
-    private final Object fakeGuardianDataWatcher;
+    private Object createGuardianPacket;
+    private  Object teamAddPacket;
+    private  Object destroyPacket;
+    private  Object metadataPacketGuardian;
+    private  Object fakeGuardianDataWatcher;
 
-    private final int squid;
-    private final UUID squidUUID;
-    private final int guardian;
-    private final UUID guardianUUID;
+    private int guardian;
+    private Player target;
+    private UUID guardianUUID;
 
     private BukkitRunnable run;
     private HashSet<Player> show = new HashSet<>();
 
     /**
-     * Create a ReferenceLaser instance
+     * Create a Laser instance
      * @param start Location where laser will starts
-     * @param end Location where laser will ends
+     * @param initalTarget Location where laser will ends
      * @param duration Duration of laser in seconds (<i>-1 if infinite</i>)
      * @param distance Distance where laser will be visible
      */
-    public ReferenceLaser(Location start, Location end, int duration, int distance) throws ReflectiveOperationException {
+    public TargetedLaser(Location start, Player initalTarget, int duration, int distance) throws ReflectiveOperationException {
         this.start = start;
-        this.end = end;
         this.duration = duration;
         distanceSquared = distance * distance;
 
-        createSquidPacket = Packets.createPacketSquidSpawn(end);
-        squid = (int) Packets.getField(Packets.packetSpawn, "a", createSquidPacket);
-        squidUUID = (UUID) Packets.getField(Packets.packetSpawn, "b", createSquidPacket);
-        metadataPacketSquid = Packets.createPacketMetadata(squid, Packets.fakeSquidWatcher);
-        Packets.setDirtyWatcher(Packets.fakeSquidWatcher);
+        this.target = initalTarget;
 
         fakeGuardianDataWatcher = Packets.createFakeDataWatcher();
-        createGuardianPacket = Packets.createPacketGuardianSpawn(start, fakeGuardianDataWatcher, squid);
+        createGuardianPacket = Packets.createPacketGuardianSpawn(start, fakeGuardianDataWatcher, target.getEntityId());
         guardian = (int) Packets.getField(Packets.packetSpawn, "a", createGuardianPacket);
         guardianUUID = (UUID) Packets.getField(Packets.packetSpawn, "b", createGuardianPacket);
         metadataPacketGuardian = Packets.createPacketMetadata(guardian, fakeGuardianDataWatcher);
 
-        teamAddPacket = Packets.createPacketTeamAddEntities(squidUUID, guardianUUID);
-        destroyPacket = Packets.createPacketRemoveEntities(squid, guardian);
+        teamAddPacket = Packets.createPacketTeamAddEntities(guardianUUID);
+        destroyPacket = Packets.createPacketRemoveEntities(guardian);
     }
 
     public void start(Plugin plugin) {
@@ -136,16 +127,27 @@ class ReferenceLaser {
         return start;
     }
 
-    public void moveEnd(Location location) throws ReflectiveOperationException {
-        this.end = location;
-        Object packet = Packets.createPacketMoveEntity(end, squid);
+    public void moveEnd(Player target) throws ReflectiveOperationException {
         for (Player p : show) {
-            Packets.sendPacket(p, packet);
+            Packets.sendPacket(p, destroyPacket);
+        }
+        this.target = target;
+        fakeGuardianDataWatcher = Packets.createFakeDataWatcher();
+        createGuardianPacket = Packets.createPacketGuardianSpawn(start, fakeGuardianDataWatcher, target.getEntityId());
+        guardian = (int) Packets.getField(Packets.packetSpawn, "a", createGuardianPacket);
+        guardianUUID = (UUID) Packets.getField(Packets.packetSpawn, "b", createGuardianPacket);
+        metadataPacketGuardian = Packets.createPacketMetadata(guardian, fakeGuardianDataWatcher);
+
+        teamAddPacket = Packets.createPacketTeamAddEntities(guardianUUID);
+        destroyPacket = Packets.createPacketRemoveEntities(guardian);
+
+        for (Player p : show) {
+            sendStartPackets(p);
         }
     }
 
-    public Location getEnd() {
-        return end;
+    public Player getTarget() {
+        return this.target;
     }
 
     public void callColorChange() throws ReflectiveOperationException{
@@ -158,11 +160,9 @@ class ReferenceLaser {
         return run != null;
     }
 
-    private void sendStartPackets(Player p) throws ReflectiveOperationException {
-        Packets.sendPacket(p, createSquidPacket);
+    public void sendStartPackets(Player p) throws ReflectiveOperationException {
         Packets.sendPacket(p, createGuardianPacket);
         if (Packets.version > 14) {
-            Packets.sendPacket(p, metadataPacketSquid);
             Packets.sendPacket(p, metadataPacketGuardian);
         }
         Packets.sendPacket(p, Packets.packetTeamCreate);
@@ -171,7 +171,7 @@ class ReferenceLaser {
 
     private boolean isCloseEnough(Location location) {
         return start.distanceSquared(location) <= distanceSquared ||
-                end.distanceSquared(location) <= distanceSquared;
+                target.getLocation().distanceSquared(location) <= distanceSquared;
     }
 
 
@@ -276,26 +276,8 @@ class ReferenceLaser {
             return watcher;
         }
 
-        public static void setDirtyWatcher(Object watcher) throws ReflectiveOperationException {
-            if (version >= 15) watcherDirty.invoke(watcher, watcherObject1);
-        }
-
-        public static Object createPacketSquidSpawn(Location location) throws ReflectiveOperationException {
-            Object packet = packetSpawn.newInstance();
-            setField(packet, "a", generateEID());
-            setField(packet, "b", UUID.randomUUID());
-            setField(packet, "c", squidID);
-            setField(packet, "d", location.getX());
-            setField(packet, "e", location.getY());
-            setField(packet, "f", location.getZ());
-            setField(packet, "j", (byte) (location.getYaw() * 256.0F / 360.0F));
-            setField(packet, "k", (byte) (location.getPitch() * 256.0F / 360.0F));
-            if (version <= 14) setField(packet, "m", fakeSquidWatcher);
-            return packet;
-        }
-
         public static Object createPacketGuardianSpawn(Location location, Object watcher, int squidId) throws ReflectiveOperationException {
-            Object packet = packetSpawn.newInstance();
+            Object packet = packetSpawn.getDeclaredConstructor().newInstance();
             setField(packet, "a", generateEID());
             setField(packet, "b", UUID.randomUUID());
             setField(packet, "c", guardianID);
@@ -311,14 +293,14 @@ class ReferenceLaser {
             return packet;
         }
 
-        public static Object createPacketRemoveEntities(int squidId, int guardianId) throws ReflectiveOperationException {
-            Object packet = packetRemove.newInstance();
-            setField(packet, "a", new int[] { squidId, guardianId });
+        public static Object createPacketRemoveEntities(int guardianId) throws ReflectiveOperationException {
+            Object packet = packetRemove.getDeclaredConstructor().newInstance();
+            setField(packet, "a", new int[] { guardianId });
             return packet;
         }
 
         public static Object createPacketMoveEntity(Location location, int entityId) throws ReflectiveOperationException {
-            Object packet = packetTeleport.newInstance();
+            Object packet = packetTeleport.getDeclaredConstructor().newInstance();
             setField(packet, "a", entityId);
             setField(packet, "b", location.getX());
             setField(packet, "c", location.getY());
@@ -329,12 +311,11 @@ class ReferenceLaser {
             return packet;
         }
 
-        public static Object createPacketTeamAddEntities(UUID squidUUID, UUID guardianUUID) throws ReflectiveOperationException {
-            Object packet = packetTeam.newInstance();
+        public static Object createPacketTeamAddEntities(UUID guardianUUID) throws ReflectiveOperationException {
+            Object packet = packetTeam.getDeclaredConstructor().newInstance();
             setField(packet, "a", "noclip");
             setField(packet, "i", 3);
             Collection<String> players = (Collection<String>) getField(packetTeam, "h", packet);
-            players.add(squidUUID.toString());
             players.add(guardianUUID.toString());
             return packet;
         }
